BOARD18 2.5.1 Release Notes
 
Changes from 2.5.0 Release:
Implemented Issue 82 -  Make "remember me" flag persistent.
Also updated the text on the login page. 

BOARD18 2.5.0 Release Notes

Changes from 2.4.7 Release:
Implemented fix for Issue 76 - Expanded email column in the players table.
Implemented Issue 81 - Implemented "Remember Me" logic in "Login" pages.
  Upgraders take note: The above changes required some database changes.
  See http://wiki.board18.org/w/Release_2.5.0_Upgrade_Note for more info.
Removed some obsolete utilities and updated the README. txt file in the
utility directory. Also made some minor documentation changes.

BOARD18 2.4.7 Release Notes

Changes from 2.4.6 Release:
Made numerous minor tweaks to various of the administration pages.
Implemented the massLoadBoxes.php utility.

BOARD18 2.4.6 Release Notes

Changes from 2.4.5 Release:
Fixed numerous errors in the validation code in the updateBox()
function in the board18Boxes.js file. Also added a README file
to the utility directory to document its contents better.

BOARD18 2.4.5 Release Notes

Changes from 2.4.4 Release:
Implemented fix for Issue 71 - Stock Market has no Menu>Accept Move.
Also enhanced comments documenting some under documented functions.

BOARD18 2.4.4 Release Notes

Changes from 2.4.3 Release:
Implemented part one of Issue 70 - Mass game box load script.
The Exit button on the BoxLoad page now returns to the Main page.

BOARD18 2.4.3 Release Notes

Changes from 2.4.2 Release:
Implemented Issue 68 - Collapse Help menu.

BOARD18 2.4.2 Release Notes

Changes from 2.4.1 Release:
Created cronCode directory to contain code for weekly backups. 
Fixed Bug 67 - New "Useful Links" capability incompatible with snap shots.

BOARD18 2.4.1 Release Notes

Changes from 2.4.0 Release:
Implemented Issue 51 - Provide unlimited tile counts. 
Fixed Issue 66 - Positioning problem with token select menu.
Updated comments in various files to better document functions.