@@ -34,6 +34,9 @@
             Web Sites</a></li>
         <li><a href="http://wiki.board18.org/w/Main_Page">
             All BOARD18 Documentation</a></li>
+        <li></li>
+        <li><a href="pnotice.html">
+            BOARD18 Privacy Notice</a></li>
       </ul>
     </div>
 
