@@ -1,0 +1,48 @@
+<!doctype html>
+<html lang="en">
+  <!--
+  Copyright (c) 2013 Richard E. Price under the 
+  Creative Commons Attribution Share Alike license.
+  A copy of this license can be found at 
+  http://creativecommons.org/licenses/by-sa/3.0/
+
+  Updated on Oct 9 2017 by Richard Price
+  -->
+  <head>
+    <meta charset="utf-8" >
+       <title>BOARD18 Privacy Notice</title>
+    <link rel="shortcut icon" href="images/favicon.ico" >
+    <link rel="stylesheet" href="style/board18web.css" >
+  </head>
+  <body>
+    <div id="topofpage">
+      <div id="logo">
+        <img src="images/logo.png" alt="Logo"> 
+      </div>
+      <div id="heading">
+        <h1>The BOARD18 Privacy Notice</h1>
+      </div>
+    </div>
+
+    <div id="leftofpage">
+
+    </div>
+
+    <div id="rightofpage"> 
+      <p style="font-size: 140%; font-weight:bold">
+        The BOARD18 Privacy Notice</p>
+      <p>
+         This privacy notice discloses the privacy practices for board18.org. 
+         This privacy notice applies solely to this website. 
+         It will notify you of the personally identifiable information that is 
+         collected from you through this website, how it is used and with whom 
+         it may be shared.
+      </p>
+      <p>
+        No information of any type is collected by the board18.org web site. <br>
+        The New Tab application used in 18xx spreadsheets does not access, use, 
+        store, or share any Google user data. 
+      </p>
+    </div>  
+  </body>
+</html>
